--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.10.6",
     "@headlessui/react": "^1.7.13",
     "@mui/material": "^5.11.16",
+    "@tabler/icons-react": "^3.28.1",
     "@tanstack/react-query": "^4.28.0",
     "@tanstack/react-table": "^8.8.5",
     "@types/node": "18.15.11",
@@ -22,6 +23,7 @@
     "axios-hooks": "^4.0.0",
     "env-cmd": "^10.1.0",
     "eslint-config-next": "^14.1.0",
+    "eventsource-parser": "^0.1.0",
     "next": "^14.1.0",
     "next-auth": "^4.21.1",
     "quill": "^1.3.7",
@@ -32,7 +34,7 @@
     "react-paginate": "^8.2.0",
     "react-quill": "^2.0.0",
     "react-table": "^7.8.0",
-    "react-toastify": "^9.1.2",
+    "react-toastify": "^9.1.3",
     "sharp": "^0.32.0",
     "socket.io-client": "^4.6.1",
     "swr": "^2.1.3",
