--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,11 +11,13 @@
   "dependencies": {
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
-    "@headlessui/react": "^1.7.13",
+    "@headlessui/react": "^1.7.19",
     "@mui/material": "^5.11.16",
+    "@react-pdf-viewer/core": "^3.12.0",
+    "@react-pdf/renderer": "^4.1.6",
     "@tabler/icons-react": "^3.28.1",
     "@tanstack/react-query": "^4.28.0",
-    "@tanstack/react-table": "^8.8.5",
+    "@tanstack/react-table": "^8.20.6",
     "@types/node": "18.15.11",
     "@types/react": "18.0.33",
     "@types/react-dom": "18.0.11",
@@ -24,13 +26,16 @@
     "env-cmd": "^10.1.0",
     "eslint-config-next": "^14.1.0",
     "eventsource-parser": "^0.1.0",
+    "jspdf": "^2.5.2",
     "next": "^14.1.0",
     "next-auth": "^4.21.1",
+    "pdfjs-dist": "^3.0.279",
+    "pdfmkr": "^0.5.6",
     "quill": "^1.3.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
-    "react-icons": "^4.8.0",
+    "react-icons": "^4.12.0",
     "react-paginate": "^8.2.0",
     "react-quill": "^2.0.0",
     "react-table": "^7.8.0",
