--- a/frontend/package.json
+++ b/frontend/package.json
@@ -45,6 +45,7 @@
     "socket.io-client": "^4.6.1",
     "swr": "^2.1.3",
     "typescript": "5.0.4",
+    "use-debounce": "^10.0.4",
     "zustand": "^4.3.7"
   },
   "devDependencies": {
