--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,21 +20,21 @@
     "@tanstack/react-query": "^4.28.0",
     "@tanstack/react-table": "^8.20.6",
     "@types/node": "18.15.11",
-    "@types/react": "18.0.33",
-    "@types/react-dom": "18.0.11",
+    "@types/react": "^18.0.33",
+    "@types/react-dom": "^18.0.11",
     "axios": "^1.3.5",
     "axios-hooks": "^4.0.0",
     "env-cmd": "^10.1.0",
     "eslint-config-next": "^14.1.0",
     "eventsource-parser": "^0.1.0",
     "jspdf": "^2.5.2",
-    "next": "^14.1.0",
+    "next": "^14.2.23",
     "next-auth": "^4.21.1",
     "pdfjs-dist": "^3.0.279",
     "pdfmkr": "^0.5.6",
     "quill": "^1.3.7",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-hook-form": "^7.43.9",
     "react-icons": "^4.12.0",
     "react-paginate": "^8.2.0",
@@ -44,7 +44,7 @@
     "sharp": "^0.32.0",
     "socket.io-client": "^4.6.1",
     "swr": "^2.1.3",
-    "typescript": "5.0.4",
+    "typescript": "^5.0.4",
     "use-debounce": "^10.0.4",
     "zustand": "^4.3.7"
   },
