--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@headlessui/react": "^1.7.19",
+    "@material-tailwind/react": "^2.1.10",
     "@mui/material": "^5.11.16",
     "@react-pdf-viewer/core": "^3.12.0",
     "@react-pdf/renderer": "^4.1.6",
@@ -24,15 +25,19 @@
     "@types/react-dom": "18.0.11",
     "axios": "^1.3.5",
     "axios-hooks": "^4.0.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "env-cmd": "^10.1.0",
     "eslint-config-next": "^14.1.0",
     "eventsource-parser": "^0.1.0",
     "jspdf": "^2.5.2",
+    "lucide-react": "^0.474.0",
     "next": "^14.1.0",
     "next-auth": "^4.21.1",
     "pdfjs-dist": "^3.0.279",
     "pdfmkr": "^0.5.6",
     "quill": "^1.3.7",
+    "radix-ui": "^1.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
@@ -44,6 +49,8 @@
     "sharp": "^0.32.0",
     "socket.io-client": "^4.6.1",
     "swr": "^2.1.3",
+    "tailwind-merge": "^2.6.0",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "5.0.4",
     "zustand": "^4.3.7"
   },
