--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,8 @@
     "axios-hooks": "^4.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
+    "datepicker": "^0.0.0",
     "env-cmd": "^10.1.0",
     "eslint-config-next": "^14.1.0",
     "eventsource-parser": "^0.1.0",
@@ -39,6 +41,7 @@
     "quill": "^1.3.7",
     "radix-ui": "^1.1.2",
     "react": "^18.3.1",
+    "react-datepicker": "^8.0.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.43.9",
     "react-icons": "^4.12.0",
