--- a/frontend/package.json
+++ b/frontend/package.json
@@ -47,6 +47,7 @@
     "react-icons": "^4.12.0",
     "react-paginate": "^8.2.0",
     "react-quill": "^2.0.0",
+    "react-spinners": "^0.15.0",
     "react-table": "^7.8.0",
     "react-toastify": "^9.1.3",
     "sharp": "^0.32.0",
